@@ -8,7 +8,6 @@ output:
 ---
 
 ```{r setup, echo=FALSE, results='hide'}
-# setup
 library(knitr, quietly=TRUE)
 opts_chunk$set(message=FALSE, warning=FALSE, background='#F7F7F7', fig.align='center', fig.retina=1, dev='png', tidy=FALSE, verbose=FALSE)
 options(width=100, stringsAsFactors=FALSE)
@@ -16,19 +15,92 @@ options(width=100, stringsAsFactors=FALSE)
 
 # Tips on getting data from NASIS into R
 `r format(Sys.time(), "%Y-%m-%d")`
-<br>D.E. Beaudette, J.M. Skovlin, S.Roecker
+<br>D.E. Beaudette, J.M. Skovlin, S. Roecker
 
-### Introduction
+> This tutorial is based on essential background material described in the [soilDB](https://r-forge.r-project.org/scm/viewvc.php/*checkout*/docs/soilDB/soilDB-Intro.html?root=aqp) and related [NASIS ODBC connection](https://r-forge.r-project.org/scm/viewvc.php/*checkout*/docs/soilDB/setup_local_nasis.html?root=aqp) tutorials. If you have not reviewed those tutorials, please do so before proceeding.
 
+## Introduction
+The `soilDB` package contains a number of **convenience functions** (usually having a prefix of "fetch") for extracting data from commonly used databases, performing basic quality control checks, and returning the result as a [SoilProfileCollection](https://r-forge.r-project.org/scm/viewvc.php/*checkout*/docs/aqp/aqp-intro.html?root=aqp) object. In order to simplify the process of stitching-together the many linked (and sometimes nested) tables associated with pedon data in NASIS, the convenience function `fetchNASIS()` must make a number of assumptions about the data. This document describes how those assumptions can be adjusted and how they may affect subsequent data analysis.
 
-## Load Data from the NASIS Selected Set
-```{r setup-and-get-data, results='show', message=TRUE}
+## Pedon Data
+Pedon data are extracted from the selected set using the `fetchNASIS()` convenience function. The resulting object is a distillation of the complex NASIS representation of a pedon into "site", "horizon", and "diagnostic" attributes. [elaborate as needed]. 
+
+Load up your local database and selected set with some pedons and follow along with the code blocks below.
+
+```{r get-pedon-data, results='hide', eval=FALSE}
 # load required libraries
 library(soilDB)
 
-# get pedons from selected set, using defaults
+# get data, using default assumptions
 p <- fetchNASIS()
 ```
+
+### Status and QC Messages ###
+As part of the quality control process, a number of possible messages are printed to the console when running `fetchNASIS()`. These messages and their meaning are described below:
+
+* `mixing dry colors ... [17 of 2250 horizons]`
+In this case, 17 of the 2250 horizons loaded into the selected set have more than 1 dry color described. Multiple colors are mixed via weighted average in order to simplify analysis.
+
+* `mixing moist colors ... [51 of 2642 horizons]`
+In this case, 51 of the 2642 horizons loaded into the selected set have more than 1 moist color described. Multiple colors are mixed via weighted average in order to simplify analysis.
+
+* `replacing missing lower horizon depths with top depth + 1cm ... [68 horizons]`
+In this case, 68 horizons have no lower depth defined. A missing lower horizon depth can create problems so a *surrogate* value is created by adding 1cm to the associated top depth.
+
+* `-> QC: sites without pedons ...`
+As the message suggests, there are sites with no associated pedons. While this isn't necessarily a quality control issue, it should be investigated. The associated user site ID values can be extracted interactively with `get('sites.missing.pedons', envir=soilDB.env)`.
+
+* `-> QC: horizon errors detected ...`
+Horizon depths are checked for gaps, overlap, or bottom depths than are shallower than top depths. In most cases pedons flagged as having errors suggests a quality control issue. However, combination horizons (e.g. B/C) that have been entered as two distinct horizons sharing the same horizon depths will trigger this warning.
+
+### Adjusting the Defaults ###
+Some of the assumptions made by `fetchNASIS()` can be adjusted using arguments to the function:
+
+* `rmHzErrors = TRUE`
+Setting this value to `TRUE` (the default) will enable checks for horizon depth consistency. Consider setting this argument to `FALSE` if you aren't concerned about horizon depth errors, or know that your selected set contains many combination horizons. Note that any pedons flagged as having horizon depths errors (`rmHzErrors = TRUE`) will be omitted from the data returned by `fetchNASIS()`.
+
+* `nullFragsAreZero = TRUE`
+Setting this value to `TRUE` (the default) will convert NULL rock fragment volumes to 0s. This is typically the right assumption as rock fragment data are typically populated *only* when observed. If you know that your data contain a combination of *ommited* information (e.g. there are no rock fragment volumes populated) then consider setting this argument to `FALSE`. Note that this argument will have significant effects on the rock fragment data returned by `fetchNASIS()` as illustrated below:
+
+```{r null-frags-demo}
+# load required libraries
+library(soilDB)
+library(plyr)
+library(reshape2)
+
+# default setting, NULL fragment volume is interpreted as 0
+f.1 <- fetchNASIS(nullFragsAreZero = FALSE)
+
+# assume NULL fragment volume is NULL
+f.2 <- fetchNASIS(nullFragsAreZero = TRUE)
+
+# fragment classes to investigate
+vars <- c("fine_gravel", "gravel", "cobbles", "stones", "boulders", "paragravel", "paracobbles", "channers", "flagstones")
+
+# get those horizon-level attributes from each set
+s.1 <- (horizons(f.1)[, vars])
+s.2 <- (horizons(f.2)[, vars])
+
+# assign fragment interpretation style
+s.1$null.frags <- 'NULL'
+s.2$null.frags <- 'Zero'
+
+# stack and convert to long format
+s <- rbind(s.1, s.2)
+s.long <- melt(s, id.vars='null.frags')
+
+# tabular comparison, using 5th, 50th, and 95th percentiles as low-rv-high
+ddply(s.long, c('variable', 'null.frags'), function(i) {
+  q <- quantile(i$value, na.rm=TRUE, probs=c(0.05, 0.5, 0.95))
+  n <- length(na.omit(i$value))
+  data.frame(stats=paste0(round(q), collapse='-'), horizons.with.data=n)
+})
+```
+
+An increased level of verbosity in the quality control messages can be enabled by setting the option: `options(soilDB.verbose=TRUE)`. This is not generally suggested, but may be useful if you are having difficulty loading data from NASIS.
+
+
+## Component Data ##
 
 
 ----------------------------
